Replacing Garbage Collector with ParallelGC
Replacing the outdated and unnecessary Garbage Collector with a more modern ParallelGC